# CL_Model

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.bak  Purpose  README.md  README_LIVE_DATA.md  SSH_OK.txt  _bootstrap_git.sh  app.py  conftest.py  fix_roll_utils_cleanup.py  patch_detect_fix.py  patch_roll_funcs.py  patch_roll_utils.py  patch_roll_wrapper.py  pyproject.toml  requirements.lock.txt  run_demo.bat  run_demo.ps1  run_demo.sh  run_oneclick.sh  setup_step0.sh  stage2_scaffold.patch  strip_zsh_comments.py
Environment Setup scripts/: ENV-QUICKSTART.md  requirements.lock.txt
backtests/: baselines.py  calibrate.py  compare.py  coverage.py  healthcheck.py  make_html_report.py  make_report.py  metrics.py  model_backtest.py  paper_trade.py  plots.py  qwalk_backtest.py  score_report.py  scoring.py  sweep.py  walkforward.py  walkforward_cqr.py  walkforward_gb.py  walkforward_gb_tune.py  walkforward_iso.py  walkforward_iso_cqr.py  walkforward_train_iso.py
config/: calibration.json  execution.json  feature_spec.json  features_manifest.json  fred_series.json  monitor.json  pipeline.json  pipeline.prod.yaml  pipeline.yaml  secrets.env  secrets.env.bak.20250908_145907  secrets.env.bak.20250908_230047  secrets.env.bak_20250908_221008  secrets.env.example  signal.json
docs/: README_STAGE2.md
env_scripts/: activate.zsh  setup_project_env.sh
etl/: cftc.py  ci_seed.py  cme.py  cme_settlements.py  cvol.py  eia.py  fred.py  nasdaq_chris_settlements.py  utils.py
features/: build_features.py  build_features.py.bak_stage5  build_features_live.py  curve_pca.py  (+12 more)
(+88 files in other folders)
