[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cl-model"
version = "0.1.0"
description = "Crude oil (CL) modeling toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "George Kurchey" }]
keywords = ["crude-oil", "CL", "trading", "quant"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","S","B","C4","SIM","RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
